# graphlimpy

./: .gitignore  LICENSE  README.md  pyproject.toml
demos/: demo_cut_reorder.py  demo_rearrange_graphon.py  demo_sampling.py  demo_stats_convergence.py  demo_step_graphon.py
graphlimpy/: __init__.py  cut.py  graphons.py  rearrange.py  sample.py  stats.py  step.py  utils.py  viz.py
